--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,12 +141,47 @@ body, html {
     background-color: #ff4500;
 }
 
+.menu-section{ 
+    background-color:#044;
+    padding: 100px 20px;
+    text-align: center;
+
+}
+
+.menu-text h1{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 90px;
+    text-align: center;
+    color: white;
+    border-radius: 0px;
+    margin: 0;
+    font-size: 95px;
+    font-weight: 1000;
+    text-transform: uppercase
+
+}
+
+.card{
+    position: relative;
+    top: -230px; 
+    left: 100px; 
+}
+
+.menu-grid {
+    grid-column: 2 / 3; /* Adjust the grid-column to your liking */
+  }
+
+
 
 
 .hotel{
     background-color: #044;
-    padding: 500px 100px;
+    padding: 700px 100px;
 }
+
 
 
 
