--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,7 +142,7 @@ body, html {
 }
 
 .menu-section{ 
-    background-color:#044;
+    background-color:rgb(0, 0, 44);
     padding: 100px 20px;
     text-align: center;
 
@@ -188,14 +188,18 @@ body, html {
     height: 185px;
 }
 
-.hotel{
-    background-color: #044;
-    padding: 0px 100px;
+.bottom-text{
+    font-size: 50px;
+    color:white;
+    margin-bottom: 0px;
+    margin-top: -180px;
+
 }
 
+
 .about-container{
-    height: 100vh; 
-    background-image: url(/Assets/hotel\ .jpg); 
+    height: 102vh; 
+    background-image: url(/Assets/About-section.jpg); 
     background-size: cover;
     background-position: center;
     color: white;
@@ -205,6 +209,19 @@ body, html {
     align-items: center;
 
 }
+
+.about-content{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 70px;
+
+}
+
+.contact-container{
+    background-color: rgb(0, 0, 44);
+    height: 50vh; 
+}
+
+
 
 
 
