--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ body, html {
 }
 
 .place {
-    background-color:#044;
+    background-color:rgb(0, 0, 44);
     padding: 50px 20px;
     text-align: center;
 }
