--- a/CSS/style.css
+++ b/CSS/style.css
@@ -159,7 +159,7 @@ nav a:hover {
 
 .view-button {
     position: absolute;
-    top: 80%;
+    top: 68%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 15px 25px;
@@ -254,7 +254,59 @@ nav a:hover {
 
 .contact-container{
     background-color: rgb(0, 0, 44);
-    height: 50vh; 
+    height: 80vh; 
+}
+
+.contact-container h1{
+    font-size: 60px;
+    color:white;
+    margin-bottom: 20px;
+
+}
+
+.form-container {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #0056b3;
 }
 
 
