--- a/CSS/style.css
+++ b/CSS/style.css
@@ -253,7 +253,8 @@ nav a:hover {
 }
 
 .contact-container{
-    background-color: rgb(0, 0, 44);
+    background-image: url(/Assets/Icon.jpg);
+    background-size: cover;
     height: 75vh; 
 }
 
@@ -265,7 +266,8 @@ nav a:hover {
 }
 
 .form-container {
-    background-color: #fff;
+    opacity: 0.8;
+    background-color: grey;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -309,7 +311,12 @@ input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
-
+.contact-container img{
+    float: right;
+    width: 700px; 
+    height: 486px;
+    margin-top: -90px;
+}
 
 
 
