--- a/CSS/style.css
+++ b/CSS/style.css
@@ -318,6 +318,22 @@ input[type="submit"]:hover {
     margin-top: -90px;
 }
 
+.contact-content{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 50px;
+    margin-left: 500px;
+    margin-top: -400px;
+    margin-right: -300px;
+    width: 90vh;
+
+    
+
+}
+
+.contact-content p{
+    color: #fff;
+    }
+
 
 
 
