--- a/CSS/style.css
+++ b/CSS/style.css
@@ -320,18 +320,17 @@ input[type="submit"]:hover {
 
 .contact-content{
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 50px;
+    padding: 70px;
     margin-left: 500px;
-    margin-top: -400px;
-    margin-right: -300px;
+    margin-top: -350px;
+    margin-right: -450px;
     width: 90vh;
-
-    
 
 }
 
 .contact-content p{
     color: #fff;
+    text-transform: uppercase;
     }
 
 
